# TeamSpeak-6-Overlay

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TeamSpeak Overlay.nsi  biome.json  components.json  componentuser.cpp  componentuser.h  forge.config.js  get_rel.ps1  index.html  jsconfig.json  main.cpp  overlaywindow.cpp  package.json  readme.md  resources.qrc  resources.rc  userbubble.cpp  vite.main.config.mjs  vite.renderer.config.mjs  websocketmanager.cpp  websocketmanager.h
.github/workflows/: build_windows.yml
src/: databasemanager.cpp  index.css  main.cpp  main.js  overlaywindow.h  overlaywindow.ui  renderer.jsx  settingswindow.cpp  settingswindow.h  settingswindow.ui  tailwind.config.js  userbubble.h  websocketmanager.cpp  websocketmanager.h
src/components/: JoiningClient.jsx  PositionSelect.jsx  SpeakingClient.jsx
src/components/ui/: input.jsx  switch.jsx
src/config/: config-manager.js
src/core/: ConfigManager.cpp  ConfigManager.h  Constants.h  DatabaseManager.cpp  DatabaseManager.h  Logger.cpp  Logger.h  Result.h
src/frontend/: index.css  index.html  renderer.jsx
src/frontend/components/: SpeakingClient.jsx
src/frontend/components/ui/: button.jsx  input.jsx  switch.jsx
src/frontend/lib/: logger.js
src/frontend/pages/: View.jsx
src/frontend/pages/settings/: Appearance.jsx
src/ipc/: handlers.js
src/network/: WebsocketManager.cpp  WebsocketManager.h
src/pages/: Settings.jsx  View.jsx
src/pages/settings/: About.jsx  Appearance.jsx  System.jsx
src/ui/: MessageBubble.cpp  MessageBubble.h  NewBubble.cpp  NewBubble.h  OverlayWindow.cpp  OverlayWindow.h  OverlayWindow.ui  SettingsWindow.cpp  SettingsWindow.ui  UserBubble.cpp
src/windows/: window-manager.js
tools/ts-launch-hook/: CMakeLists.txt  main.cpp  readme.txt
